<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rem"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="cursive"
        android:text="@string/register_here"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0033FF"
        android:textColorHint="#0047FF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:id="@+id/etMail"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_people_24"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:id="@+id/etName"
            android:hint="@string/enter_your_name2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_margin="10dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:id="@+id/etpassword"
            android:hint="@string/enter_your_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/ic_baseline_verified_user_24"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:id="@+id/etUsername"
            android:hint="@string/enter_your_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/signButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#B3124FBF"
            android:text="@string/register" />
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#B3124FBF"
            android:text="@string/sign_in" />
    </LinearLayout>



</LinearLayout>