<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rem"
    tools:context=".Profile"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0033FF"
        android:textColorHint="#0047FF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:text="@string/hey_user_nyour_name_is_username_nemail_id_is_email_npassword_is_password_n"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0033FF"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />




    <Button
        android:id="@+id/homeBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#B3124FBF"
        android:text="@string/home" />


</LinearLayout>