<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rem"
    tools:context=".SignIn"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="cursive"
        android:text="@string/sign_in_here"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0033FF"
        android:textColorHint="#0047FF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:startIconDrawable="@drawable/ic_baseline_verified_user_24"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:id="@+id/etUsername"
            android:hint="@string/enter_your_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/black"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:id="@+id/etpassword"
            android:hint="@string/enter_your_password" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/signButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#B3124FBF"
        android:text="@string/log_in" />


</LinearLayout>